<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_browse"
            android:icon="@drawable/ic_nav_search"
            android:title="@string/nav_browse" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_nav_categories"
            android:title="@string/nav_categories" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_nav_favorites"
            android:title="@string/nav_favorites" />
        <item
            android:id="@+id/nav_recently_watched"
            android:icon="@drawable/ic_nav_recently_watched"
            android:title="@string/nav_recently_watched" />
    </group>

    <item android:title="@string/welcome">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/menu_about" />

            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/pp_terms" />

            <item
                android:id="@+id/nav_terms"
                android:icon="@drawable/ic_menu_terms"
                android:title="@string/menu_terms" />

            <item
                android:id="@+id/nav_feed_back"
                android:icon="@drawable/ic_menu_feedback"
                android:title="@string/menu_help_feedback" />

        </menu>
    </item>

</menu>
