<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.akramhossain.islamicvideo.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--RECENTLY WATCHED SECTION-->
            <RelativeLayout
                android:id="@+id/recently_watched_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/recent_watched_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="5dp"
                    android:text="@string/recent_watched_title"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recentlyWatchView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recent_watched_title" />

            </RelativeLayout>

            <!--MOST VIEWED SECTION-->
            <RelativeLayout
                android:id="@+id/most_viewed_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recently_watched_section"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/most_viewed_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="5dp"
                    android:text="@string/most_viewed_title"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mostViewed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/most_viewed_title" />

            </RelativeLayout>


            <!--TOP CATEGORY SECTION-->
            <RelativeLayout
                android:id="@+id/top_category_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/most_viewed_section"
                android:orientation="vertical"
                android:visibility="gone">

                <RelativeLayout
                    android:id="@+id/category_title_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/top_category_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginTop="0dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="5dp"
                        android:text="@string/top_category_title"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/category_view_all"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:clickable="true"
                        android:gravity="right"
                        android:paddingRight="8dp"
                        android:text="@string/view_all"
                        android:textSize="15dp" />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/topCategoryView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/category_title_section"
                    android:nestedScrollingEnabled="false" />

            </RelativeLayout>


            <!--FETURED VIDEO SECTION-->
            <RelativeLayout
                android:id="@+id/featured_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/top_category_section"
                android:orientation="vertical"
                android:visibility="gone">

                <RelativeLayout
                    android:id="@+id/featured_title_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/home_featured_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginTop="0dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="5dp"
                        android:text="@string/featured_title"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/featured_view_all"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:clickable="true"
                        android:gravity="right"
                        android:paddingRight="8dp"
                        android:text="@string/view_all"
                        android:textSize="15dp" />

                </RelativeLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/featured_title_section"
                    android:nestedScrollingEnabled="false" />


                <RelativeLayout
                    android:id="@+id/browse_all_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recyclerview"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_browse_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="8dp"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="Browse All Video"
                        android:textColor="#FFFFFF" />

                </RelativeLayout>


            </RelativeLayout>


        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center|center_horizontal"
            android:visibility="gone" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
